deploy/k8s/assetserver/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: summit
  labels:
    app.kubernetes.io/part-of: summit
